feat: support Twitter and Codepen embeds on blog posts

--- a/src/_layouts/blog-post.scss
+++ b/src/_layouts/blog-post.scss
@@ -128,4 +128,18 @@ article {
       }
     }
   }
+
+  // embed default styling
+  blockquote.twitter-tweet,
+  p.codepen {
+    margin: auto;
+    max-width: 500px;
+    min-height: 450px;
+    border-radius: 10px;
+    background: #fdf6e3;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 }
