--- a/src/_layouts/index.pug
+++ b/src/_layouts/index.pug
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 - var defaultTitle = "Ben Holmes"
 - var defaultDescription = "I'm a web dev, UX freak, and restless tinkerer. Let me teach you the art of building websites!"
-- var defaultImage = "/assets/og-images/me.jpg"
+- var defaultImage = "https://bholmes.dev/assets/og-images/me.jpg"
 
 include icons
 
@@ -32,7 +32,7 @@ html(lang="en-US")
     meta(name="twitter:creator" content="@bholmesdev")
     meta(name="description" content=description || defaultDescription)
     meta(property="og:url" content=page.url)
-    meta(property="og:image" content='https://bholmes.dev' + (image || defaultImage))
+    meta(property="og:image" content=image || defaultImage)
     meta(property="og:image:width" content="1200")
     meta(property="og:image:height" content="630")
     meta(property="og:site_name" content="Ben Holmes")
