--- a/src/work.pug
+++ b/src/work.pug
@@ -1,7 +1,7 @@
 ---
 title: Ben's Work
 description: Everything I've built over the years, from JAMstack apps to Java Swing!
-image: /assets/og-images/work.jpg
+image: https://bholmes.dev/assets/og-images/work.jpg
 ---
 
 include icons
