fix: auto-crop older blog post images

--- a/src/_layouts/blog-post.scss
+++ b/src/_layouts/blog-post.scss
@@ -7,6 +7,7 @@ article {
     img {
       margin-bottom: 16px;
       aspect-ratio: 7 / 3;
+      object-fit: cover;
       height: auto;
       width: 100%;
       background: #f2e9cd;
