--- a/src/_layouts/index.pug
+++ b/src/_layouts/index.pug
@@ -56,9 +56,9 @@ html(lang="en-US")
           li
             a(href="/" class=page.url === '/' ? 'active' : '') Me
           li
-            a(href="/work/" class=page.url.startsWith('/work') ? 'active' : '') Work
-          li
             a(href="/blog/" class=page.url.startsWith('/blog') ? 'active' : '') Blog
+          li
+            a(href="/work/" class=page.url.startsWith('/work') ? 'active' : '') Works
           li
             a(href="/contact/" class=page.url.startsWith('/contact') ? 'active' : '') Contact
 
