--- a/src/_layouts/index.pug
+++ b/src/_layouts/index.pug
@@ -76,6 +76,7 @@ html(lang="en-US")
             form(action='https://tinyletter.com/bholmesdev' method='post' target='_blank')
               label(for="email") Email
               input#email(type="email" name="email" placeholder="10xengineer@genius.club" required)
+              p.newsletter__never-spam Don't worry, I won't spam you
               button.cta-link(type="submit")
                 | Yes please, more content
                 +icon('send')
