refactor: change phrase on Twitter cta

--- a/src/_layouts/blog-post.pug
+++ b/src/_layouts/blog-post.pug
@@ -15,7 +15,7 @@ article(data-page=slinkit.page)
   hr
   footer
     p Learn a little something? 
-      strong Share the love #[a(href="https://twitter.com/intent/tweet?text=" + encodeURI(tweet) target="_blank" rel="noreferrer") on Twitter!]
+      strong #[a(href="https://twitter.com/intent/tweet?text=" + encodeURI(tweet) target="_blank" rel="noreferrer") Share this post] on Twitter!
     section.about-the-author
       img(src="/assets/images/me.jpg" alt="Hand drawn portrait of Ben Holmes")
       div
