feat: add author to website meta

--- a/src/_layouts/index.pug
+++ b/src/_layouts/index.pug
@@ -27,6 +27,7 @@ html(lang="en-US")
     link(rel="preload" as="fetch" href="/work/index.html")
     link(rel="preload" as="fetch" href="/contact/index.html")
 
+    meta(name="author" content="Ben Holmes")
     meta(name="twitter:card" content="summary_large_image")
     meta(name="twitter:site" content="@bholmesdev")
     meta(name="twitter:creator" content="@bholmesdev")
