feat: add analytics to head

--- a/src/_layouts/index.pug
+++ b/src/_layouts/index.pug
@@ -40,6 +40,9 @@ html(lang="en-US")
     meta(property="og:title" content=title || defaultTitle)
     meta(property="og:description" content=description || defaultDescription)
 
+    // Analytics
+    script(async defer data-domain='bholmes.dev' src='https://stats.bholmes.dev/js/index.js')
+
   body
     nav#site-navigation
 
