--- a/src/_layouts/index.pug
+++ b/src/_layouts/index.pug
@@ -15,6 +15,7 @@ html(lang="en-US")
     link(rel="preload" href="/assets/fonts/Atkinson/Atkinson-Hyperlegible-BoldItalic.woff2" as="font" crossorigin="anonymous")
     link(rel="stylesheet" href="https://use.typekit.net/liz3dnm.css")
     link(rel="icon" type="img/jpg" href="/assets/favicon.jpg")
+    link(rel="canonical" href='https://bholmes.dev' + page.url)
     meta(name='viewport' content='width=device-width,initial-scale=1.0')
 
     // TODO: automatically generate these at buildtime
