feat: add loading animation

--- a/src/_layouts/index.pug
+++ b/src/_layouts/index.pug
@@ -72,6 +72,11 @@ html(lang="en-US")
           .stripe-middle
           .stripe-bottom
 
+    #loading-spinner(aria-label='loading')
+      .loading-spinner__graphic
+        .loading-spinner__graphic--dash
+        .loading-spinner__graphic--dash
+        .loading-spinner__graphic--dash
     div(data-page=slinkit.page)
       main !{content}
       footer
