--- a/src/_layouts/index.scss
+++ b/src/_layouts/index.scss
@@ -133,6 +133,61 @@ a:hover {
   opacity: 0.4;
 }
 
+#loading-spinner {
+  opacity: 0;
+  position: fixed;
+  top: var(--nav-height);
+  left: 0;
+  width: 100%;
+  transition: opacity 0.3s;
+
+  &.loading {
+    opacity: 1;
+  }
+
+  .loading-spinner__graphic {
+    margin: auto;
+    background: var(--bg-color);
+    width: 80px;
+    height: 20px;
+    display: flex;
+    justify-content: space-around;
+
+    .loading-spinner__graphic--dash {
+      height: 6px;
+      width: 20px;
+      background: var(--color);
+      animation: highlight 600ms ease-in-out infinite;
+
+      &:first-child {
+        --color: var(--green);
+      }
+
+      &:nth-child(2) {
+        --color: var(--red);
+        animation-delay: 100ms;
+      }
+
+      &:nth-child(3) {
+        --color: var(--purple);
+        animation-delay: 200ms;
+      }
+
+      @keyframes highlight {
+        0%,
+        100% {
+          transform: scaleX(1);
+          background-color: var(--bg-color-2);
+        }
+        50% {
+          transform: scaleX(1.1);
+          background-color: var(--color);
+        }
+      }
+    }
+  }
+}
+
 .visually-hidden {
   visibility: hidden !important;
 }
