--- a/src/work.scss
+++ b/src/work.scss
@@ -131,7 +131,7 @@ section {
       align-items: center;
       align-content: center;
 
-      img {
+      .project__thumbnail {
         grid-area: img;
         width: 100%;
       }
