--- a/src/contact.pug
+++ b/src/contact.pug
@@ -7,7 +7,7 @@ include icons
 
 section
   h1 Contact Me
-  img(src="/assets/images/me-on-phone.jpg" alt="Charcoal sketch of me walking with phone in hand" width=600 height=718)
+  .picture !{toOptimizedImg({ src: "./assets/images/me-on-phone.jpg", alt: "Charcoal sketch of me walking with phone in hand" })}
   p.tagline
     :markdown-it(inline)
       Let's chat! I'm always available through my [Twitter DMs](https://twitter.com/BHolmesDev) and [by email](mailto:bholmesdev@gmail.com), but you can fill out this shiny form too :)
