fix: improve base page title + descriptions

--- a/src/_layouts/index.pug
+++ b/src/_layouts/index.pug
@@ -63,7 +63,7 @@ html(lang="en-US")
       .primary-nav__container
         ul#primary-nav__links
           li
-            a(href="/" class=page.url === '/' ? 'active' : '') Me
+            a(href="/" class=page.url === '/' ? 'active' : '') Ben
           li
             a(href="/blog/" class=page.url.startsWith('/blog') ? 'active' : '') Blog
           li
