--- a/src/blog/index.pug
+++ b/src/blog/index.pug
@@ -1,3 +1,8 @@
+---
+title: Ben Holmes | Blog
+description: Let's learn some web development! I love variety, so I focus on "plain" HTML, CSS, and JS tips that extend to any web framework.
+---
+
 - var formattedPosts = toSortedPosts(collections.blogPost)
 
 section
