--- a/src/contact.pug
+++ b/src/contact.pug
@@ -1,6 +1,6 @@
 ---
-title: Contact Ben
-description: Let's get in touch!
+title: Ben Holmes | Contact
+description: Let's get in touch! I'm just an email or Twitter DM away.
 ---
 
 include icons
