--- a/src/work.pug
+++ b/src/work.pug
@@ -1,6 +1,6 @@
 ---
-title: Ben's Work
-description: Everything I've built over the years, from JAMstack apps to Java Swing!
+title: Ben Holmes | Work
+description: Here's everything I've built over the years, from JAMstack apps to Java Swing games
 image: https://bholmes.dev/assets/og-images/work.jpg
 ---
 
