--- a/src/index.pug
+++ b/src/index.pug
@@ -1,3 +1,7 @@
+---
+title: Ben Holmes | Home
+---
+
 section#header-section
   .header-section__picture !{toOptimizedImg({ src: './assets/images/me.jpg', alt: 'Charcoal portrait of Ben Holmes', width: 600, height: 600 })}
 
