fix: reverse order of title text

--- a/src/blog/index.pug
+++ b/src/blog/index.pug
@@ -1,5 +1,5 @@
 ---
-title: Ben Holmes | Blog
+title: Blog | Ben Holmes
 description: Let's learn some web development! I love variety, so I focus on "plain" HTML, CSS, and JS tips that extend to any web framework.
 ---
 
