--- a/src/contact.pug
+++ b/src/contact.pug
@@ -1,5 +1,5 @@
 ---
-title: Ben Holmes | Contact
+title: Contact | Ben Holmes
 description: Let's get in touch! I'm just an email or Twitter DM away.
 ---
 
