--- a/src/work.pug
+++ b/src/work.pug
@@ -1,5 +1,5 @@
 ---
-title: Ben Holmes | Work
+title: Work | Ben Holmes
 description: Here's everything I've built over the years, from JAMstack apps to Java Swing games
 image: https://bholmes.dev/assets/og-images/work.jpg
 ---
