--- a/src/_layouts/index.pug
+++ b/src/_layouts/index.pug
@@ -33,7 +33,7 @@ html(lang="en-US")
     meta(name="twitter:site" content="@bholmesdev")
     meta(name="twitter:creator" content="@bholmesdev")
     meta(name="description" content=description || defaultDescription)
-    meta(property="og:url" content=page.url)
+    meta(property="og:url" content='https://bholmes.dev' + page.url)
     meta(property="og:image" content=image || defaultImage)
     meta(property="og:image:width" content="1200")
     meta(property="og:image:height" content="630")
