--- a/src/_layouts/index.pug
+++ b/src/_layouts/index.pug
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 - var defaultTitle = "Ben Holmes"
 - var defaultDescription = "I'm a web dev, UX freak, and restless tinkerer. Let me teach you the art of building websites!"
-- var defaultImage = "https://bholmes.dev/assets/og-images/me.jpg"
+- var defaultImage = "assets/og-images/me.jpg"
+- var formattedImage = (image && image.startsWith('http')) ? image : ('https://bholmes.dev/' + (image || defaultImage))
 
 include icons
 
@@ -34,7 +35,7 @@ html(lang="en-US")
     meta(name="twitter:creator" content="@bholmesdev")
     meta(name="description" content=description || defaultDescription)
     meta(property="og:url" content='https://bholmes.dev' + page.url)
-    meta(property="og:image" content=image || defaultImage)
+    meta(property="og:image" content=formattedImage)
     meta(property="og:image:width" content="1200")
     meta(property="og:image:height" content="630")
     meta(property="og:site_name" content="Ben Holmes")
