--- a/src/_layouts/index.scss
+++ b/src/_layouts/index.scss
@@ -49,7 +49,8 @@ $font-path: '/assets/fonts/Atkinson/';
   --body-color: #5f4b32;
   --body-color-2: #948067;
   --bg-color: #f9f1db;
-  --bg-color-2: #d9c7ab;
+  --bg-color-2: #f2e9cd;
+  --bg-color-3: #d9c7ab;
   --green: #24ac6c;
   --green-faded: #5fb88e;
   --section-color: var(--green);
@@ -87,7 +88,7 @@ html {
 }
 
 hr {
-  background: var(--bg-color-2);
+  background: var(--bg-color-3);
   border: none;
   height: 2px;
 }
@@ -178,7 +179,7 @@ a:hover {
         0%,
         100% {
           transform: scaleX(1);
-          background-color: var(--bg-color-2);
+          background-color: var(--bg-color-3);
         }
         50% {
           transform: scaleX(1.1);
@@ -382,12 +383,13 @@ section {
   margin: auto;
   padding-left: 80px;
   padding-right: 80px;
-  padding-bottom: 200px;
+  padding-bottom: 100px;
   margin-top: 100px;
 
   @media (max-width: $tablet-breakpoint) {
     padding-left: 20px;
     padding-right: 20px;
+    padding-bottom: 60px;
   }
 
   @media (max-width: $mobile-breakpoint) {
@@ -525,7 +527,7 @@ body > [data-page] > footer {
         display: block;
         background: none;
         border: none;
-        border-bottom: 2px solid var(--bg-color-2);
+        border-bottom: 2px solid var(--bg-color-3);
         width: 100%;
         margin-top: 15px;
         margin-bottom: 16px;
