--- a/src/index.pug
+++ b/src/index.pug
@@ -27,7 +27,7 @@ section#header-section
     p You'll learn <strong>universal solutions</strong> to common web developer problems, no matter your frontend framework of choice. Preview the <a href="https://tinyletter.com/bholmesdev/letters/">latest issue here</a>!
     form.newsletter-callout__input(action='https://tinyletter.com/bholmesdev' method='post' target='_blank')
       input#email(type="email" name="email" placeholder="fellowsorceror@webwizardry.club" aria-label="email" required)
-      button.cta-link(type="submit")
+      button(type="submit")
         | Subscribe
         +icon('send')
 
