--- a/src/index.scss
+++ b/src/index.scss
@@ -69,47 +69,55 @@
       font-weight: bold;
       margin-top: 70px;
 
-      > span {
+      > span,
+      &::after {
         background-color: var(--section-color);
         background-image: linear-gradient(
-          var(--green) 33.33%,
+          var(--green) 0%,
+          var(--green) 16.67%,
+          var(--bg-color) 16.67%,
+          var(--bg-color) 33.33%,
           var(--red) 33.33%,
-          var(--red) 66.67%,
-          var(--purple) 66.67%
+          var(--red) 50%,
+          var(--bg-color) 50%,
+          var(--bg-color) 66.67%,
+          var(--purple) 66.67%,
+          var(--purple) 83.33%,
+          var(--bg-color) 83.33%,
+          var(--bg-color) 100%
         );
-        background-size: 100% 300%;
+        background-size: 100% 600%;
+      }
+
+      > span {
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         -moz-background-clip: text;
         -moz-text-fill-color: transparent;
-        animation: rotate-text-color 6s ease-out infinite;
+        animation: rotate-text-color 8s ease-out infinite;
       }
 
       &::after {
         --icon-size: 1em;
         margin-left: 30px;
-        background-image: linear-gradient(
-          var(--green) 33.33%,
-          var(--red) 33.33%,
-          var(--red) 66.67%,
-          var(--purple) 66.67%
-        );
-        background-size: 100% 300%;
         animation: float-up-down ease-in-out 2s infinite,
-          rotate-text-color ease-out 6s infinite;
+          rotate-text-color ease-out 8s infinite;
       }
       @keyframes rotate-text-color {
-        0% {
+        0%,
+        25% {
           background-position-y: 0;
         }
-        33% {
-          background-position-y: 50%;
+        34%,
+        58% {
+          background-position-y: 40%;
         }
-        67% {
-          background-position-y: 100%;
+        66%,
+        91% {
+          background-position-y: 80%;
         }
         100% {
-          background-position-y: 150%;
+          background-position-y: 120%;
         }
       }
     }
@@ -259,17 +267,31 @@ section {
         }
       }
       button {
+        @include subheader-font;
+        line-height: 1;
+        display: flex;
+        align-items: center;
         margin-top: 0;
-        background: var(--section-color);
+        background-color: var(--section-color);
+        background-image: linear-gradient(
+          90deg,
+          var(--red) 33.33%,
+          var(--purple) 33.33%,
+          var(--purple) 66.67%,
+          var(--green) 66.67%
+        );
+        background-size: 300% 100%;
+        transition: background-position-x 0.3s;
         color: var(--bg-color);
         border: none;
         padding-left: 20px;
 
-        &::before {
-          display: none;
+        &:hover {
+          background-position-x: -100%;
         }
         svg {
           fill: var(--bg-color);
+          margin-left: 10px;
         }
       }
     }
