fix: cta arrow icon for safari

--- a/src/index.pug
+++ b/src/index.pug
@@ -15,8 +15,10 @@ section#header-section
       li Blogger
       li Charcoal fan
 
-    a.header-section__cta.icon-after.icon__arrow-down(href="#inbrief-section" aria-labelledby="more-about-me") 
+    a.header-section__cta(href="#inbrief-section" aria-labelledby="more-about-me") 
       span(id="more-about-me") More about me
+      .header-section__cta--icon
+        include arrow-down-inverse.svg
 
 .newsletter-callout__container
   section#newsletter-callout
