--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -15,10 +15,23 @@ const { title } = Astro.props as Props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<slot />
+		<header>
+			<nav>
+				<a href="/">Ben</a>
+				<a href="/blog">Blog</a>
+			</nav>
+		</header>
+		<div>
+			<main data-page={Astro.url.pathname}>
+				<slot />
+			</main>
+		</div>
 	</body>
 </html>
-<style>
+
+<script src="../router/main"></script>
+
+<style is:global>
 	:root {
 		--font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
 		--font-size-lg: clamp(1.2rem, 0.7vw + 1.2rem, 1.5rem);
@@ -27,6 +40,27 @@ const { title } = Astro.props as Props;
 		--color-text: hsl(12, 5%, 4%);
 		--color-bg: hsl(10, 21%, 95%);
 		--color-border: hsl(17, 24%, 90%);
+
+		--page-anim-duration: 200ms;
+	}
+
+	* {
+		box-sizing: border-box;
+		position: relative;
+	}
+
+	[data-page][data-page-enter] {
+		position: absolute;
+		inset: 0;
+		animation: fade var(--page-anim-duration) ease-in forwards;
+	}
+	[data-page][data-page-exit] {
+		animation: fade var(--page-anim-duration) ease-out reverse;
+	}
+
+	@keyframes fade {
+		from { opacity: 0 }
+		to { opacity: 1 }
 	}
 
 	html {
@@ -40,16 +74,17 @@ const { title } = Astro.props as Props;
 		margin: 0;
 	}
 
-	:global(h1) {
+	h1 {
 		font-size: var(--font-size-xl);
 	}
 
-	:global(h2) {
+	h2 {
 		font-size: var(--font-size-lg);
 	}
 
-	:global(code) {
+	code {
 		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
 			Bitstream Vera Sans Mono, Courier New, monospace;
 	}
 </style>
+
