--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -11,6 +11,31 @@ const { title } = Astro.props as Props;
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
+		<link
+      rel="preload"
+      href="/fonts/Atkinson/Atkinson-Hyperlegible-Regular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous">
+    <link
+      rel="preload"
+      href="/fonts/Atkinson/Atkinson-Hyperlegible-Bold.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous">
+    <link
+      rel="preload"
+      href="/fonts/Atkinson/Atkinson-Hyperlegible-Italic.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous">
+    <link
+      rel="preload"
+      href="/fonts/Atkinson/Atkinson-Hyperlegible-BoldItalic.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous">
+		<link rel="stylesheet" href="/fonts/index.css" media="print" onload="this.media='all'" />
 		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 		<title>{title}</title>
 	</head>
@@ -64,7 +89,7 @@ const { title } = Astro.props as Props;
 	}
 
 	html {
-		font-family: system-ui, sans-serif;
+		font-family: Atkinson, system-ui, sans-serif;
 		font-size: var(--font-size-base);
 		color: var(--color-text);
 		background-color: var(--color-bg);
