--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -66,7 +66,7 @@ const { title } = Astro.props as Props;
 		--color-bg: hsl(10, 21%, 95%);
 		--color-border: hsl(17, 24%, 90%);
 
-		--page-anim-duration: 200ms;
+		--page-anim-duration: 0.2s;
 	}
 
 	* {
