--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,9 +1,12 @@
 ---
+import Outlet from "../components/Outlet.astro";
+
 export interface Props {
 	title: string;
 }
 
 const { title } = Astro.props as Props;
+globalThis.layoutIndex = 0
 ---
 
 <!DOCTYPE html>
@@ -47,9 +50,9 @@ const { title } = Astro.props as Props;
 			</nav>
 		</header>
 		<div>
-			<main data-page={import.meta.url}>
+			<Outlet metaUrl={import.meta.url}>
 				<slot />
-			</main>
+			</Outlet>
 		</div>
 	</body>
 </html>
