feat: more font sizes

--- a/src/pages/_index/HeadingLink.astro
+++ b/src/pages/_index/HeadingLink.astro
@@ -14,7 +14,7 @@ const { href } = Astro.props as Props;
 
 <style>
   li {
-    font-size: var(--font-size-lg);
+    font-size: var(--font-size-md);
   }
   a, a:visited {
     text-decoration: none;
