--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -71,9 +71,16 @@ globalThis.layoutIndex = 0
 
 <style is:global>
 	:root {
+		--font-size-sm: clamp(0.8rem, 0.17vw + 0.76rem, 0.89rem);
 		--font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
-		--font-size-lg: clamp(1.2rem, 0.7vw + 1.2rem, 1.5rem);
-		--font-size-xl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
+		--font-size-md: clamp(1.25rem, 0.61vw + 1.1rem, 1.58rem);
+		--font-size-lg: clamp(1.56rem, 1vw + 1.31rem, 2.11rem);
+		--font-size-xl: clamp(1.95rem, 1.56vw + 1.56rem, 2.81rem);
+		--font-size-xxl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
+		--font-size-xxxl: clamp(3.05rem, 3.54vw + 2.17rem, 5rem);
+
+		--font-family-body: Atkinson, system-ui, sans-serif;
+		--font-family-heading: "rigid-square", var(--font-family-body);
 
 		--sepia-1: hsl(44, 71%, 92%);
 		--sepia-3: hsl(41, 38%, 76%);
@@ -114,7 +121,7 @@ globalThis.layoutIndex = 0
 	}
 
 	html {
-		font-family: Atkinson, system-ui, sans-serif;
+		font-family: var(--font-family-body);
 		font-size: var(--font-size-base);
 		color: var(--color-text);
 		background-color: var(--color-bg);
@@ -125,16 +132,16 @@ globalThis.layoutIndex = 0
 	}
 
 	h1 {
-		font-size: var(--font-size-xl);
+		font-size: var(--font-size-xxxl);
 		text-transform: uppercase;
 	}
 
 	h2 {
-		font-size: var(--font-size-lg);
+		font-size: var(--font-size-xl);
 	}
 
 	h1, h2, h3 {
-		font-family: "rigid-square";
+		font-family: var(--font-family-heading);
 		font-weight: 600;
 	}
 
