fix: style CTA :visited

--- a/src/pages/_index/Heading.astro
+++ b/src/pages/_index/Heading.astro
@@ -42,7 +42,7 @@ import HeadingLink from "./HeadingLink.astro";
 		flex-direction: column;
 		gap: 0.8em;
 	}
-	.cta {
+	.cta, .cta:visited {
 		grid-area: cta;
 		color: var(--color-primary);
 		font-family: var(--font-family-heading);
