feat: basic color strip box

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,12 @@
 ---
 import Layout from "../layouts/Base.astro";
+import ColorStrip from "./_index/ColorStrip.astro";
 import Heading from "./_index/Heading.astro";
+import InBrief from "./_index/InBrief.astro";
 ---
 
 <Layout title="Ben Holmes">
 	<Heading />
+	<ColorStrip />
+	<InBrief />
 </Layout>
